tests/fixtures/LatestTests/ContainerTests/errors/array_index_non_array_error.fg
/; EXPECT_ERROR: IndexingNonArrayTypeVariable
var a:int = 2
println(a[0])
